syntax = "proto3";




//
//* some options : only work for java rather than go,py,cpp,php,js,c,c#,ruby,dart...
option java_multiple_files = true;
option java_package = "com.blinderjay.BBS.grpc.Con";
//option java_package = "contact";
//option java_generic_services = true;
//option objc_class_prefix = "BBS";
//option java_outer_classname = "bbsConProto";


package Con;


service BBS_Con {

// following 2 request do not need cookie
    rpc userRegister(userRegisReq) returns (userInRes){};
    rpc userLogin(userLoginReq) returns (userInRes){};
     rpc getAllThreads(bbsClientReq) returns (stream bbsThread){};



//all request need cookie,and server should check it
//all the response need a error,and client should handle if(err0 or other)         
    
            //get info:
    rpc getUserInfo(bbsClientReq) returns (bbsUserInfo){};
    rpc getThreads(bbsClientReq) returns (stream bbsThread){};   //
    rpc genPosts(bbsClientReq) returns (stream bbsPost){};
            //refresh info in database
    rpc chPassword(bbsClientReq) returns (bbsServerRes){}; 
    rpc refreshUserInfo(bbsUserInfo) returns (bbsServerRes){};  
    rpc pushThread(bbsThread) returns(bbsServerRes){};       //
    rpc pushPosts(bbsPost) returns(bbsServerRes){};    //
            //delete info in database or server
    rpc userLogout(bbsClientReq) returns (bbsServerRes){};
    rpc delThread(bbsClientReq) returns (bbsServerRes){};  //
    rpc delPost(bbsClientReq) returns (bbsServerRes){};    //
            //for test
      rpc  getinfo(userinfoReq) returns  (userinfoReply) {};

}

//cookie info
message bbsCookie {
    string name = 1;
    string value = 2;
}

//time
message bbsTime{
    int32 year =1;
    int32 month=2;
    int32 day = 3;
    int32 hour =4;
    int32 minute = 5;
    int32 second =6;
}

//error
message bbsError {
    enum errType {
        err0 = 0;
        Invalid = 1;
        NoResource = 2;
        Duplicate = 3;
        InfomationUncomplete = 4;
        Unknown = 5;
    }
    errType  errtype= 1;
    string errInfo = 2;
}

// request type
message bbsClientReq{
    bbsCookie cookie = 1;
        enum reqType {
        genUserInfo= 0;
        genThreads = 1;
        genPosts = 2;
        chPassword = 3;
        delUser=4;
        delThread=5;
        delPost=6;
        logOut = 7;
        Unknown = 8;
    }
    reqType reqtype = 2;
    string arg = 3;
}

// reponse type 
message bbsServerRes{
    bbsError err = 1;
    string mess = 2;
}







//
//* User Init Request and response
//
message userRegisReq{
    string email = 1;
    string pass = 2;
    string name =3;
    string des = 4;
}

message userLoginReq{
    string name = 1;
    string pass = 2;
}


message userInRes{
    bbsError err =1;
    bbsCookie cookie = 2;
}






//
//*   some special resource 
//

message bbsUserInfo{
 bbsCookie cookie=1;
bbsError err =2;
    string name = 3;
    string email = 4;
    bbsTime lastlogintime = 5;
}

message bbsThread {
 bbsCookie cookie=1;
bbsError err = 2;
int32 tid = 3;
string user = 4;
string topic = 5;
string contex = 6;
bbsTime time = 7;
}

message bbsPost {
 bbsCookie cookie = 1;
bbsError err = 2;
int32 pid = 3;
int32 tid = 4;
string user = 5;
string contex = 6;
bbsTime time = 7;
}













//
// !!!!!!! this is just for test
 // for user request and response
//

// about user request
message userinfoReq{
    bbsCookie cookie = 1;
}

//about user info repley (just to be in test)
message userinfoReply{
    bbsError err = 1;
    string email = 2;
    string des = 3;
}











